; ModuleID = '/home/carl/AnghaBench/mongoose/examples/coap_server/extr_coap_server.c_coap_handler.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/coap_server/extr_coap_server.c_coap_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_connection = type { i32 }
%struct.mg_coap_message = type { i32 }

@.str = private unnamed_addr constant [31 x i8] c"CON with msg_id = %d received\0A\00", align 1
@.str.1 = private unnamed_addr constant [52 x i8] c"Successfully sent ACK for message with msg_id = %d\0A\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"Error: %d\0A\00", align 1
@.str.3 = private unnamed_addr constant [39 x i8] c"ACK/RST/NOC with msg_id = %d received\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mg_connection*, i32, i8*)* @coap_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @coap_handler(%struct.mg_connection* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.mg_connection*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.mg_coap_message*, align 8
  %9 = alloca %struct.mg_coap_message*, align 8
  store %struct.mg_connection* %0, %struct.mg_connection** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %10 = load i32, i32* %5, align 4
  switch i32 %10, label %41 [
    i32 130, label %11
    i32 129, label %34
    i32 131, label %34
    i32 128, label %34
  ]

11:                                               ; preds = %3
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.mg_coap_message*
  store %struct.mg_coap_message* %13, %struct.mg_coap_message** %8, align 8
  %14 = load %struct.mg_coap_message*, %struct.mg_coap_message** %8, align 8
  %15 = getelementptr inbounds %struct.mg_coap_message, %struct.mg_coap_message* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %16)
  %18 = load %struct.mg_connection*, %struct.mg_connection** %4, align 8
  %19 = load %struct.mg_coap_message*, %struct.mg_coap_message** %8, align 8
  %20 = getelementptr inbounds %struct.mg_coap_message, %struct.mg_coap_message* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @mg_coap_send_ack(%struct.mg_connection* %18, i32 %21)
  store i32 %22, i32* %7, align 4
  %23 = load i32, i32* %7, align 4
  %24 = icmp eq i32 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %11
  %26 = load %struct.mg_coap_message*, %struct.mg_coap_message** %8, align 8
  %27 = getelementptr inbounds %struct.mg_coap_message, %struct.mg_coap_message* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @printf(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.1, i64 0, i64 0), i32 %28)
  br label %33

30:                                               ; preds = %11
  %31 = load i32, i32* %7, align 4
  %32 = call i32 @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i32 %31)
  br label %33

33:                                               ; preds = %30, %25
  br label %41

34:                                               ; preds = %3, %3, %3
  %35 = load i8*, i8** %6, align 8
  %36 = bitcast i8* %35 to %struct.mg_coap_message*
  store %struct.mg_coap_message* %36, %struct.mg_coap_message** %9, align 8
  %37 = load %struct.mg_coap_message*, %struct.mg_coap_message** %9, align 8
  %38 = getelementptr inbounds %struct.mg_coap_message, %struct.mg_coap_message* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.3, i64 0, i64 0), i32 %39)
  br label %41

41:                                               ; preds = %3, %34, %33
  ret void
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @mg_coap_send_ack(%struct.mg_connection*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
